--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,16 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
+/**{*/
+  /*margin: 0;*/
+  /*padding: 0;*/
+/*}*/
+/*body {*/
+  /*font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;*/
+/*}*/
 
-a {
-  color: #00B7FF;
+/*a {*/
+  /*color: #00B7FF;*/
+/*}*/
+
+body {
+  padding-top: 50px;
+  padding-bottom: 20px;
 }
