--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,21 @@ doctype html
 html
   head
     title= title
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.4/css/bootstrap.min.css")
+    block header
+
   body
+    block nav
+      include nav
+
+
     block content
+
+
+
+    script(src="http://cdn.bootcss.com/jquery/1.11.2/jquery.min.js")
+    script(src="http://cdn.bootcss.com/bootstrap/3.3.4/js/bootstrap.min.js")
+    block script
