--- a/views/login.jade
+++ b/views/login.jade
@@ -8,7 +8,7 @@ block content
     form.form-horizontal(method='post')
       .form-group
         .col-md-5
-          input.form-control(type='text', placeholder='用户名' name='username' value="#{username}")
+          input.form-control(type='text', placeholder='用户名' name='username' value="#{username || ''}")
       .form-group
         .col-md-5
           input.form-control(type='password', placeholder='密码' name='password')
